  * Added "galenectl" utility and removed "galene-password-generator".
    This is an incompatible change.
  * Fixed a number of bugs in the management protocol.
  * Implemented captions for the galene-stt tool.
  * Reworked the peer-to-peer file transfer protocol.  This is an
    incompatible change.
  * Added an id to every chat message, and made it possible to remove
    a single chat message.

15 July 2024: Galene 0.9.1

  * Added an example client with minimal functionality under static/example.
  * Changed the token login to force a user interaction in order to avoid
    issues with autoplay.
  * Fixed a race condition that would cause the client to run with
    undefined settings if the initial connection was extremely fast.
  * Implemented client-side timeouts (we already had one on the server side).
  * Reduced the server-side timeout.
  * Don't attempt to set the file descriptor limit, since recent versions
    of the Go runtime do it automatically.

26 May 2024: Galene 0.9

  * Reworked the group definition format to be more modular.  There are
    some incompatible changes: multiple users with the same username but
    distinct passords are no longer supported, and the field
    "allow-anonymous" is ignored.
  * Reworked the definition of administrator passwords in config.json.
    The old field "admin" is ignored, a new field "users" is required.
    This is an incompatible change.
  * Implemented an administrative API over HTTP.  Set the field
    "writableGroups" in config.json to enable it.  The API is described in
    the file "README.API", a JavaScript library is in management.js.
  * Implemented a form to allow users to change their password.  If the
    HTTP API is enabled, a link will appear in the side menu.
  * Implemented a new command "/identify" (also availble in the users
    menu) that discloses the IP address from which a user connected.
  * Implemented a contextual menu that triggers on a double click on
    a chat entry.